--- a/tsdemo/index.html
+++ b/tsdemo/index.html
@@ -7,18 +7,19 @@
     <title>Document</title>
     <style>
     *{font-size: 20px;}
-    .container{display: inline-block;}
+    .calc{width: 12em;}
     .output{height: 2em;border: 1px solid #ddd;border-radius: 2em;position: relative;}
     .output span{position: absolute;right: .5em;top:.4em}
-    .button{
+    button{
+        height: 2em;
         width: 3em;
         border: none;
         border-radius: 1.5em;
     }
-    .button.text-0{
+    button.text-0{
         width: 6em;
     }
-    .button.text-clear{
+    button.text-Clear{
         width: 9em;
     }
     </style>
